# jni-playground

./: .gitignore  .travis.yml  README.adoc
.github/workflows/: main.yml
HelloWorldJNI/: .classpath  CMakeLists.txt  build.sh
HelloWorldJNI/jni/: HelloWorldService.cpp
HelloWorldJNI/src/com/example/jni/: HelloWorldService.java  HelloWorldServiceNative.java
